feat(applicswagger) cr-todoiando documentação do endpiont sotre
