# app/Models/User.php
@@ -4,7 +4,7 @@ namespace App\Models;
 
 // use Illuminate\Contracts\Auth\MustVerifyEmail;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
-use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Illuminate\Database\Eloquent\Relations\HasMany;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
 use Laravel\Sanctum\HasApiTokens;
@@ -42,8 +42,8 @@ class User extends Authenticatable
             'password' => 'hashed',
         ];
     }
-    public function todos(): BelongsTo
+    public function todos(): HasMany
     {
-        return $this->belongsTo(Todo::class);
+        return $this->hasMany(Todo::class);
     }
 }
