# storage/api-docs/api-docs.json
@@ -348,6 +348,99 @@
                 ]
             }
         },
+        "/api/todos": {
+            "post": {
+                "tags": [
+                    "Todos"
+                ],
+                "description": "Store an new todo",
+                "operationId": "44d5a7059cab2c8343633464c6befde7",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "description": "Name Todo",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            },
+                            "example": {
+                                "name": "Todo Teste"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Todo updated successfully!",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "example": {
+                                                "meta": {
+                                                    "code": 201,
+                                                    "status": "success",
+                                                    "message": "Todo updated successfully!"
+                                                },
+                                                "data": {
+                                                    "todo": {
+                                                        "id": 2,
+                                                        "user_id": 1,
+                                                        "name": "Todo teste",
+                                                        "updated_at": "2024-07-29T20:17:01.000000Z",
+                                                        "created_at": "2024-07-29T20:17:01.000000Z"
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "424": {
+                        "description": "Validation errors",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "example": {
+                                                "success": false,
+                                                "message": "Validation errors",
+                                                "data": {
+                                                    "name": [
+                                                        "The name field is required."
+                                                    ]
+                                                }
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/user": {
             "put": {
                 "tags": [
@@ -578,6 +671,10 @@
         {
             "name": "Authenticate",
             "description": "Authenticate"
+        },
+        {
+            "name": "Todos",
+            "description": "Todos"
         },
         {
             "name": "User",
